# discord-mcp

./: .env.example  .gitignore  API_V9.md  AUTHENTICATION.md  README.md  check_channels.py  config.example.json  pyproject.toml  requirements.txt  server.py  setup.sh
scripts/: test_deploy.py
src/: __init__.py  client.py  discord_api.py  main.py  tools.py
