[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "discord-mcp"
version = "0.1.0"
description = "A Model Context Protocol server for Discord"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "discord.py>=2.3.0",
]

[project.scripts]
discord-mcp = "server:main"
