[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "discord-mcp"
version = "0.1.0"
description = "A Model Context Protocol server for Discord"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dedalus-mcp>=0.1.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
discord-mcp = "src.main:main"

[tool.hatchling.build]
packages = ["src"]